data/derived/comb/progs/unify/prog1328.ml.out
Characters 78-84:
  | Sine s -> "pi* " + exprToString s;;
              ^^^^^^
Error: This expression has type string but an expression was expected of type
         int
